Web Inspector: REGRESSION(r251254): Elements: forced pseudo-class indicator isn't visible for selected nodes https://bugs.webkit.org/show_bug.cgi?id=203158
Reviewed by Matt Baker.

* UserInterface/Views/DOMTreeOutline.css:
(.tree-outline.dom li > :not(.selection-area)): Added.
(.tree-outline.dom li > span): Deleted.


Canonical link: https://commits.webkit.org/216563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251297 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DOMTreeOutline.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DOMTreeOutline.css
@@ -69,7 +69,7 @@
     opacity: 0.3;
 }
 
-.tree-outline.dom li > span {
+.tree-outline.dom li > :not(.selection-area) {
     position: relative;
     z-index: 1;
 }
